--- a/packages/metro-transform-worker/package.json
+++ b/packages/metro-transform-worker/package.json
@@ -17,6 +17,9 @@
     "@babel/generator": "^7.5.0",
     "@babel/parser": "^7.0.0",
     "@babel/types": "^7.0.0",
+    "@babel/plugin-syntax-flow": "^7.2.0",
+    "@babel/plugin-transform-flow-strip-types": "^7.0.0",
+    "@babel/plugin-transform-typescript": "^7.5.0",
     "babel-preset-fbjs": "^3.3.0",
     "metro": "0.64.0",
     "metro-babel-transformer": "0.64.0",
